--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yongze/yaf-api",
+    "name": "chenyongze/yaf-api",
     "description": "yaf api jwt restful",
     "type": "project",
     "require": {
